--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,8 +12,7 @@
 
 <h1>ログイン</h1>
 
-<p class="error" th:if="${session.SPRING_SECURITY_LAST_EXCEPTION}"
-   th:text="${session.SPRING_SECURITY_LAST_EXCEPTION.message}">Login error</p>
+<p class="error" th:if="${param.error}">ユーザー名またはパスワードが違います。</p>
 
 <form method="post" action="index.html" th:action="@{/login}">
     <table border="1">
